[gd_scene load_steps=154 format=3 uid="uid://b07xutea3tepb"]

[ext_resource type="Script" path="res://Scenes/StageScene/Board/Board.gd" id="1_cxyap"]
[ext_resource type="Script" path="res://Resources/DataContainers/CellData.gd" id="2_1j0lx"]
[ext_resource type="Script" path="res://Scenes/StageScene/Board/BoardCellContainer.gd" id="2_qp6ts"]
[ext_resource type="Script" path="res://Resources/DataContainers/StageInstance.gd" id="3_aue4e"]
[ext_resource type="Script" path="res://Resources/UtilityNode/StageCamera.gd" id="3_coe5m"]
[ext_resource type="Script" path="res://Resources/DataContainers/StageMod.gd" id="4_82dqt"]
[ext_resource type="Script" path="res://Resources/DataContainers/Stage.gd" id="5_oecle"]

[sub_resource type="Resource" id="Resource_rei7o"]
script = ExtResource("2_1j0lx")
mode = 2
value = 0

[sub_resource type="Resource" id="Resource_o1ebw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_renwn"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_p22br"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_8povb"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_bpob8"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_kcd51"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_lsld7"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_aa7vi"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_16nwb"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_h3mul"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e7fob"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_pq52f"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_q6ryq"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_jkwhp"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_xqqhc"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_6nx7t"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_kuixa"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ao6ib"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ctj8l"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_cmomj"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_71q06"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_cnspa"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_r7axm"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ofum4"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_73vlf"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_gldgx"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_we8xc"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_kbtg2"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_eoywi"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_yqe1m"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_uymk6"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_23wiw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_o1j3o"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_sy7cl"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_3ndfh"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_1peek"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_i8x4a"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_aj44a"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_jitts"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_577km"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ewuw6"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_huxsw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_quukk"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_dmri2"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_rwldv"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_eaxlo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_qx73v"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_web30"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_vshi5"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_o4c0h"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_15bqy"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_rj561"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_0b5vh"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_wa46w"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_yv2m4"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_bqafg"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_3kiu7"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ty1gu"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ogqdy"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e1rwu"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_4hs2c"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_yd7lw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_uqv0r"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_r1vao"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ha3pe"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_g7ic3"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ja3wt"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_0gguf"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_5ekwv"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_woymv"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_bc0bo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_8cqmn"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_7mmlo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_epoeo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_4f814"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_0dtmi"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_uro8e"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_rb8tl"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_s0jns"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_un2nm"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_elgp6"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_07oxt"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e8c2s"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_hyftg"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ksjhq"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_fj8b8"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_bt0ui"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_klctv"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_28a1r"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_2jsc0"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_g73oa"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_7wky5"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_g1o6r"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e5xn2"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_fvynf"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_udbce"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_y20yw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_8p1i6"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_s4jx4"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_snuqe"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_gl2ga"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_7sklp"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_6oijq"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_my7fk"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_a75fs"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_27jrq"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e3ogc"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_tqgix"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_h3lpo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_4wr4m"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_46vey"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_73jjm"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ilk1m"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_l2cr2"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_oxr0g"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_crg0s"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_w8040"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_jvmum"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_e4o3j"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_xxslw"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_44r4y"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_6tee0"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_aa3rt"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_xc70u"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_qas8a"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_laxp8"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_b1bjm"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_f5f5c"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_gisfb"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_s5gpp"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_otm4y"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_dbfbs"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_4nfrb"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_ukkbu"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_lbtpo"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_s5wxu"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_0o52e"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_a2n53"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_crokn"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_hfxyv"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_3s2k0"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_b8ac5"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_u7t0s"]
script = ExtResource("2_1j0lx")
mode = 0
value = 0

[sub_resource type="Resource" id="Resource_3a5sy"]
script = ExtResource("5_oecle")
name = "ocean"
size = Vector2i(12, 12)
monsters = 11
min_power = 2
max_power = 5
locked = false
completed = false
mods = Array[ExtResource("4_82dqt")]([])

[sub_resource type="Resource" id="Resource_7xug1"]
script = ExtResource("3_aue4e")
stage = SubResource("Resource_3a5sy")
cells = Array[ExtResource("2_1j0lx")]([SubResource("Resource_rei7o"), SubResource("Resource_o1ebw"), SubResource("Resource_renwn"), SubResource("Resource_p22br"), SubResource("Resource_8povb"), SubResource("Resource_bpob8"), SubResource("Resource_kcd51"), SubResource("Resource_lsld7"), SubResource("Resource_aa7vi"), SubResource("Resource_16nwb"), SubResource("Resource_h3mul"), SubResource("Resource_e7fob"), SubResource("Resource_pq52f"), SubResource("Resource_q6ryq"), SubResource("Resource_jkwhp"), SubResource("Resource_xqqhc"), SubResource("Resource_6nx7t"), SubResource("Resource_kuixa"), SubResource("Resource_ao6ib"), SubResource("Resource_ctj8l"), SubResource("Resource_cmomj"), SubResource("Resource_71q06"), SubResource("Resource_cnspa"), SubResource("Resource_r7axm"), SubResource("Resource_ofum4"), SubResource("Resource_73vlf"), SubResource("Resource_gldgx"), SubResource("Resource_we8xc"), SubResource("Resource_kbtg2"), SubResource("Resource_eoywi"), SubResource("Resource_yqe1m"), SubResource("Resource_uymk6"), SubResource("Resource_23wiw"), SubResource("Resource_o1j3o"), SubResource("Resource_sy7cl"), SubResource("Resource_3ndfh"), SubResource("Resource_1peek"), SubResource("Resource_i8x4a"), SubResource("Resource_aj44a"), SubResource("Resource_jitts"), SubResource("Resource_577km"), SubResource("Resource_ewuw6"), SubResource("Resource_huxsw"), SubResource("Resource_quukk"), SubResource("Resource_dmri2"), SubResource("Resource_rwldv"), SubResource("Resource_eaxlo"), SubResource("Resource_qx73v"), SubResource("Resource_web30"), SubResource("Resource_vshi5"), SubResource("Resource_o4c0h"), SubResource("Resource_15bqy"), SubResource("Resource_rj561"), SubResource("Resource_0b5vh"), SubResource("Resource_wa46w"), SubResource("Resource_yv2m4"), SubResource("Resource_bqafg"), SubResource("Resource_3kiu7"), SubResource("Resource_ty1gu"), SubResource("Resource_ogqdy"), SubResource("Resource_e1rwu"), SubResource("Resource_4hs2c"), SubResource("Resource_yd7lw"), SubResource("Resource_uqv0r"), SubResource("Resource_r1vao"), SubResource("Resource_ha3pe"), SubResource("Resource_g7ic3"), SubResource("Resource_ja3wt"), SubResource("Resource_0gguf"), SubResource("Resource_5ekwv"), SubResource("Resource_woymv"), SubResource("Resource_bc0bo"), SubResource("Resource_8cqmn"), SubResource("Resource_7mmlo"), SubResource("Resource_epoeo"), SubResource("Resource_4f814"), SubResource("Resource_0dtmi"), SubResource("Resource_uro8e"), SubResource("Resource_rb8tl"), SubResource("Resource_s0jns"), SubResource("Resource_un2nm"), SubResource("Resource_elgp6"), SubResource("Resource_07oxt"), SubResource("Resource_e8c2s"), SubResource("Resource_hyftg"), SubResource("Resource_ksjhq"), SubResource("Resource_fj8b8"), SubResource("Resource_bt0ui"), SubResource("Resource_klctv"), SubResource("Resource_28a1r"), SubResource("Resource_2jsc0"), SubResource("Resource_g73oa"), SubResource("Resource_7wky5"), SubResource("Resource_g1o6r"), SubResource("Resource_e5xn2"), SubResource("Resource_fvynf"), SubResource("Resource_udbce"), SubResource("Resource_y20yw"), SubResource("Resource_8p1i6"), SubResource("Resource_s4jx4"), SubResource("Resource_snuqe"), SubResource("Resource_gl2ga"), SubResource("Resource_7sklp"), SubResource("Resource_6oijq"), SubResource("Resource_my7fk"), SubResource("Resource_a75fs"), SubResource("Resource_27jrq"), SubResource("Resource_e3ogc"), SubResource("Resource_tqgix"), SubResource("Resource_h3lpo"), SubResource("Resource_4wr4m"), SubResource("Resource_46vey"), SubResource("Resource_73jjm"), SubResource("Resource_ilk1m"), SubResource("Resource_l2cr2"), SubResource("Resource_oxr0g"), SubResource("Resource_crg0s"), SubResource("Resource_w8040"), SubResource("Resource_jvmum"), SubResource("Resource_e4o3j"), SubResource("Resource_xxslw"), SubResource("Resource_44r4y"), SubResource("Resource_6tee0"), SubResource("Resource_aa3rt"), SubResource("Resource_xc70u"), SubResource("Resource_qas8a"), SubResource("Resource_laxp8"), SubResource("Resource_b1bjm"), SubResource("Resource_f5f5c"), SubResource("Resource_gisfb"), SubResource("Resource_s5gpp"), SubResource("Resource_otm4y"), SubResource("Resource_dbfbs"), SubResource("Resource_4nfrb"), SubResource("Resource_ukkbu"), SubResource("Resource_lbtpo"), SubResource("Resource_s5wxu"), SubResource("Resource_0o52e"), SubResource("Resource_a2n53"), SubResource("Resource_crokn"), SubResource("Resource_hfxyv"), SubResource("Resource_3s2k0"), SubResource("Resource_b8ac5"), SubResource("Resource_u7t0s")])

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxyap")
_stage_instance = SubResource("Resource_7xug1")

[node name="BoardCellContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 12
script = ExtResource("2_qp6ts")
_stage_instance = SubResource("Resource_7xug1")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="StageCamera" type="Camera2D" parent="Control"]
unique_name_in_owner = true
script = ExtResource("3_coe5m")
move_speed = 650.0

[connection signal="stage_finished" from="BoardCellContainer" to="." method="_on_board_cell_container_stage_finished"]
